<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jxr202="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jxr202.colorful_ui.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#B6D989"
        jxr202:leftDrawable="@mipmap/ic_common_back"
        jxr202:leftImageVisibility="visible"
        jxr202:rightDrawable="@mipmap/ic_common_share"
        jxr202:rightImageVisibility="visible"
        jxr202:titleColor="#ffffff"
        jxr202:titleText="@string/app_name"
        jxr202:titleTextSize="17sp"
        jxr202:titleTextVisibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/dream"/>

    <TextView
        android:id="@+id/dreamList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:text="@string/dream_analysis"/>

</LinearLayout>
